# tiago-moveit2-pathplanning

./: .gitmodules  Readme.md
config/: moveit2.rviz  tags_36h11.yaml
docker/: .compose_templates.yml  Dockerfile.tiago_workspace  ros2-apriltag.yml  tiago_inspection.yml  tiago_moveit.yml  tiago_workspace.yml
final_project/clean_the_table/: package.xml  setup.py
final_project/clean_the_table/clean_the_table/: drive_to_table.py  pick_and_carry.py  scene_analysis.py
final_project/config/: moveit2.rviz
final_project/docker/: .compose_templates.yml  Dockerfile.tiago_workspace  drive_and_place.yml  final_drive_to_table.yml  moveit_demo.yml  pick_and_carry.yml  ros2-apriltag.yml  scene_analysis.yml  tiago_inspection.yml  tiago_moveit.yml  tiago_sim.yml
final_project/submodules/ros-2-apriltags/configs/: tags_36h11_custom.yaml
final_project/submodules/ros-2-apriltags/submodules/install/: local_setup.sh  setup.sh
final_project/submodules/ros-2-apriltags/submodules/log/: latest_build
maps/: myfirstmap.pgm  myfirstmap.yaml  testmap.pgm  testmap.yaml  testmap_backup.pgm  testmap_backup.yaml
models/: spawn_objects_single.py
stage_1/: main.py  main_class.py
stage_2/: conftest.py
stage_2/my_package/: setup.py
stage_2/plugins/: conftest_loader.py
stage_2/py_pubsub/: package.xml  setup.cfg  setup.py
stage_2/py_pubsub/py_pubsub/: publisher_member_function.py  pubsub.py  subscriber_member_function.py
stage_2/simple_node/: dummy.py
stage_3/docker/: .compose_templates.yml  Dockerfile_Workspace  compose-tiago-demo.yml  tiago_nav.yml  tiago_slam.yml  tiago_workspace.yml
stage_3/maps/: testmap.yaml
stage_3/my_nav2/: package.xml  setup.py
stage_3/my_nav2/my_nav2/: goal_pub.py
stage_3/tiago_inspection/: package.xml  setup.py
stage_3/tiago_inspection/tiago_inspection/: start_inspection.py
stage_3/wall_stop/: package.xml  setup.py
stage_3/wall_stop/wall_stop/: wall_stop_node.py
stage_4/custom_interfaces/: CMakeLists.txt  package.xml
stage_4/custom_interfaces/msg/: ReachedWallT.msg
stage_4/drive_to_wall/: package.xml  setup.py
stage_4/drive_to_wall/drive_to_wall/: drive_to_wall_action.py  drive_to_wall_action_client.py  drive_to_wall_service.py  drive_to_wall_service_client.py  drive_to_wall_topic.py  drive_to_wall_topic_client.py
stage_5/custom_interfaces/: CMakeLists.txt  package.xml
stage_5/custom_interfaces/action/: DriveToWallA.action  LookAtMarker.action  MoveHead.action
stage_5/custom_interfaces/srv/: DriveToWallS.srv
stage_5/move_head/: package.xml  setup.py
stage_5/move_head/move_head/: look_at_marker.py  look_at_marker_action.py  move_head.py  move_head_action.py
stage_5/tf_test/: package.xml  setup.py
stage_5/tf_test/tf_test/: tf_test.py
stage_6/hello_moveit/: CMakeLists.txt
stage_6/hello_moveit/src/: collision_object_test.cpp  hello_moveit.cpp  hello_moveit_collision_cycle.cpp
stage_6/install/: local_setup.sh  setup.sh
stage_6/install/hello_moveit/lib/hello_moveit/: hello_moveit
stage_6/install/hello_moveit/share/hello_moveit/: local_setup.sh  package.sh
stage_6/log/: latest_build
stage_6/moveit_wrapper_test/: package.xml  setup.py
stage_6/moveit_wrapper_test/moveit_wrapper_test/: test_collision_objects.py  test_move_robot.py  test_pick_place.py
